--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
             <li><a href="#">이메일무단수집거부</a></li>
             <li><a href="#">영상기기관리방침</a></li>
           </ul>
-          <address>(주)에스쁘아 대표이사: 이연정 본사: 서울특별시 용산구 한강대로 100 (한강로2가) 6층
-            사업자번호: 104-86-58598 통신판매업신고번호: 제 2017-서울용산-1293호
+          <address>(주)에스쁘아 대표이사: 이연정 본사: 서울특별시 용산구 한강대로 100 (한강로2가) 6층<br>
+            사업자번호: 104-86-58598 통신판매업신고번호: 제 2017-서울용산-1293호<br>
             개인정보보호책임자: 이연정 고객상담: 080-619-8888 이메일: espoirmall@espoir.com</address>
           <div class="copy">Copyright &copy; 2023 espoir. All Rights Reserved.</div>
         </div>
